# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  existing_session.cast  pyproject.toml
brain_games/: cli.py  logic.py  logic_calc.py
brain_games/for_games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/games/: even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
