[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["sidrus51 <rallyrus51@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
